Updates border colors, fixes dark mode

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ legend{color:#000}
     --black: rgb(0,0,0);
     --white: rgb(255,255,255);
     --white1: rgb(245,245,245);
-    --white2: rgb(240,240,240);
+    --white2: rgb(230,230,230);
     --grey-light: rgb(200,200,200);
     --grey-dark: rgb(125,125,125);
     --link-blue: rgb(76,176,237);
@@ -203,7 +203,7 @@ sup { vertical-align: top;
 @media (prefers-color-scheme: dark) {
     html { background: rgb(36,36,45); }
     body { color: var(--white1); }
-    pre, code { color: var(--white1); }
+    pre, code { color: var(--white1); border-color: rgb(71,71,80); }
     code, pre code { background-color: rgb(51,51,60); }
     a { color: var(--white1); }
     a:hover, a:before, a:after {
